# wmenu_drun

./: Cargo.toml  README.md
src/: main.rs
