[package]
name = "wmenu_drun"
description = "Wrapper around wmenu(1) to also display desktop files."
authors = [ "Tom van Dijk <18gatenmaker6@gmail.com>", "Denis Chevalier <contact@denischevalier.fr>" ]
homepage = "https://github.com/denisdubochevalier/wmenu/blob/master/wmenu_drun"
repository = "https://github.com/dtomvan/wmenu_drun/"
license = "MIT"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
fork = "0.1.18"
itertools = "0.10.3"
lazy_static = "1.4.0"
